<resources>
    <string name="app_name">Bantuaku</string>
    <string name="title_home">Task</string>
    <string name="title_dashboard">Add Task</string>
    <string name="title_notifications">Profile</string>

    <!--Registration Activity-->
    <string name="header_image">Header Image </string>
    <string name="buat_akun">Buat Akun</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="no_telepon">Telepon</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="ulangi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="masuk">Masuk</string>

    <!--Registration Confirmation-->
    <string name="selamat">Selamat!</string>
    <string name="berhasil_desc">Anda telah berhasil membuat akun Bantuku!</string>
    <string name="silahkan_login">Silahkan login</string>
    <string name="selesai">Selesai</string>
    <!--Login-->
    <string name="asuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_login">Daftar</string>

    <!--Error-->
    <string name="err_nama">Hanya huruf dan spasi putih yang diizinkan</string>
    <string name="err_no_name">Nama harus diisi</string>
    <string name="err_email">Format email tidak valid</string>
    <string name="err_no_email">Email harus diisi</string>
    <string name="err_telp">Nomor telepon minimal 12 angka</string>
    <string name="err_no_telp">Nomor telepon harus diisi</string>
    <string name="err_password">Kata sandi harus mengandung setidaknya 6 karakter, termasuk huruf besar / kecil dan angka</string>
    <string name="err_no_password">Password harus diisi</string>
    <string name="err_password_conf">Konfirmasi kata sandi tidak cocok</string>

    <!--Profil-->
    <string name="profil">Profil</string>
    <string name="hubungi">Hubungi</string>
    <string name="poin">Poin</string>
    <string name="tentang">Tentang</string>
    <string name="keahlian">Keahlian</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="keluar">Keluar</string>
    <!--Edit foto profil-->
    <string name="edit_foto_profil">Edit Foto Profil</string>
    <string name="hapus_foto">Hapus Foto Profil</string>
    <string name="ambil_gallery">Upload Foto dari Galeri</string>
    <string name="ambil_foto">Ambil Foto Melalui Kamera</string>

    <!--Posting Bantuan-->
    <string name="post_bantuan_title">Posting Bantuan</string>
    <string name="input_judul_bantuan">Nama Pekerjaan</string>
    <string name="input_deskripsi_bantuan">Deskripsi Pekerjaan</string>
    <string name="bayaran">Bayaran</string>
    <string name="rupiah">Rp.</string>
    <string name="rupiah_hint">0</string>
    <string name="target_date">Target</string>
    <string name="target_date_hint">24/04/2019</string>
    <string name="kirim">Kirim</string>

    <!--Posting -->
    <string name="judul_example">Contoh judul task pada listview</string>
    <string name="nama_example">Nama</string>
    <string name="tanggal_example">28/21/2019</string>
    <string name="fee_example">Rp. 50.000</string>
    <string name="berhasil_mengirim">Berhasil Mengirim</string>
    <string name="add_task_done_desc">Silahkan lihat status notifikasi anda</string>
    <!--Message-->
    <string name="message_addtask">Ingin kirim bantuan?</string>
    <string name="btn_batal">Batal</string>
    <string name="btn_kirim">Kirim</string>

    <!--Detail-->
    <string name="detail">Detail</string>
    <string name="cari_bantuan">Cari Bantuan</string>

</resources>
