<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp">
    <ImageView
        android:layout_width="221dp"
        android:layout_height="147dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:src="@drawable/register_header"
        android:contentDescription="@string/header_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/masuk"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/colorPrimary"
        android:textSize="27sp"
        android:textStyle="bold" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:fontFamily="@font/poppins_medium"
                android:inputType="text"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:hint="@string/kata_sandi"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_style"
        android:text="@string/masuk"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/White"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/belum_punya_akun"
        android:fontFamily="@font/poppins_medium"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/daftar_login"
        android:fontFamily="@font/poppins_medium"
        android:id="@+id/linkDaftar"
        android:textColor="@color/colorPrimary"
        android:clickable="true"
        android:textSize="16sp" />

</LinearLayout>