<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_addtask"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginBottom="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingBottom="30dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_batal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:strokeColor="@color/colorPrimary"
            android:text="@string/btn_batal"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/poppins_medium"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_kirim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_kirim"
            android:fontFamily="@font/poppins_medium"
            android:backgroundTint="@color/colorPrimary"/>
    </LinearLayout>
</LinearLayout>