<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterConfirmation"
    android:orientation="vertical"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:fitsSystemWindows="true">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="Berhasil"
        android:layout_gravity="center"
        android:layout_marginTop="180dp"
        android:src="@drawable/success"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/selamat"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/berhasil_desc"
        android:textSize="20sp"
        android:textAlignment="center"/>
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:text="@string/silahkan_login"-->
        <!--android:textSize="20sp"-->
        <!--android:textAlignment="center"/>-->

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_vertical"
        android:layout_marginTop="150dp"
        android:id="@+id/selesai"
        android:text="@string/selesai"
        android:textColor="@color/White"
        android:background="@drawable/button_style"/>
</LinearLayout>