<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight=".25"
                android:layout_gravity="center_vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="14sp"
                    android:text="@string/nama_example"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="8dp"
                android:layout_weight=".75">
                <TextView
                    android:id="@+id/tv_judul_bantuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/judul_example"
                    android:textSize="16sp"/>
                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/fb_keahlian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:flexWrap="wrap"
                    app:flexDirection="row">

                </com.google.android.flexbox.FlexboxLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">
                    <TextView
                        android:id="@+id/tv_tanggal"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".5"
                        android:textColor="@color/colorPrimary"
                        android:drawableStart="@drawable/ic_date"
                        android:drawableTint="@color/colorPrimary"
                        android:drawablePadding="2dp"
                        android:text="@string/tanggal_example"/>
                    <TextView
                        android:id="@+id/tv_fee"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/fee_example"
                        android:gravity="right"
                        android:paddingRight="8dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</androidx.cardview.widget.CardView>